--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://leojoe1.github.io/Portfolio",
+  "homepage": "https://leochouarbi.github.io/Portfolio",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
